--- a/sftpstatements-local.yml
+++ b/sftpstatements-local.yml
@@ -11,15 +11,15 @@ spring:
   kafka:
     producer:
       client-id: ecs-bank-statement-producer
-      bootstrap-servers: broker:9092
+      bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
       properties:
-        schema.registry.url: http://schema-registry:8081
+        schema.registry.url: http://localhost:8081
 
 s3:
   config:
-    url: http://localstack:4566
+    url: http://localhost:4566
     region: south-east-1
     access-key-id: test
     secret-key-id: test
