--- a/sftpstatements-local.yml
+++ b/sftpstatements-local.yml
@@ -30,5 +30,5 @@ application:
       integration-code: ecs-bank
       process: STATEMENTS
       validation-required: true
-      topic: Transformation1
+      topic: statement.fct.files.0
       file-format: MT940
